edit describe item page

--- a/src/styles/scss/templates/describeItem.scss
+++ b/src/styles/scss/templates/describeItem.scss
@@ -1,9 +1,7 @@
 // Другая страница с блоками новостей BEGIN
-.portfolio-describe-item {
-	padding: 0 15px;
+.describe-item {
 
-	h1,
-	h2 {
+	h1 {
 		font-family: "RalewayBold";
 		text-align: center;
 	}
@@ -23,10 +21,21 @@
 	}
 
 	h2 {
+		font-family: "RalewayBold";
+		text-align: left;
 		margin-top: 25px;
-		font-size: 24px;
+		font-size: 18px;
 		line-height: 26px;
 		color: #56295A;
+	}
+}
+
+.portfolio-describe-item {
+	padding: 0 15px;
+
+	&__container-base-caption {
+		margin: 0 0 0 100px;
+		max-width: 970px;
 	}
 
 	&__text {
@@ -34,19 +43,36 @@
 		font-family: "RalewayRegular";
 		font-size: 14px;
 		line-height: 24px;
-		text-align: center;
+		// text-align: center;
 		color: #000000;
 	}
-	&__image {
-		box-shadow: 0 0 20px rgba(0, 0, 0, .7);
-		margin: 10px 0;
-		border-radius: 5px;
+
+	&__image--shadow {
+		filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.25));
 	}
+
+	&__container-color-solution {
+		margin: 0 0 50px 100px;
+	}
+
+	&__container-color-solution-describe {
+		display: flex;
+	}
+
+	&__container-color-solution-text-container {
+		max-width: 570px;
+		margin: 0 30px 0 0;
+	}
+
+	&__container-color-solution-image-container {
+		
+	}
+
 	&__container-for-buttons {
 		display: flex;
 		justify-content: space-around;
 		align-items: center;
-		margin-bottom: 135px;
+		margin: 45px 0 25px;
 
 		a {
 			position: relative;
@@ -85,72 +111,22 @@
 			transform: rotate(180deg);
 		}
 
-	
 	}
 
 	&__organic-food-website-development-background-1 {
-		background: url(../styles/images/describeItems/organic-food-website-development/banner-2.png) no-repeat center center;
-		height: 550px;
+		background: url(../styles/images/describeItems/organic-food-website-development/preview12.png) no-repeat center center;
+		height: 1000px;
 	}
 
 	&__organic-food-website-development-background-2 {
-		background: url(../styles/images/describeItems/organic-food-website-development/color_img.png) no-repeat center center;
-		height: 656px;
+		width: 501px;
+		height: 281px;
 	}
 
 	&__organic-food-website-development-background-3 {
-		background: url(../styles/images/describeItems/organic-food-website-development/image_why_are_we.png) no-repeat center center;
-		height: 676px;
-	}
-
-	&__organic-food-website-development-background-4 {
-		background: url(../styles/images/describeItems/organic-food-website-development/image_catalog.png) no-repeat center center;
-		height: 1905px;
-	}
-
-	&__organic-food-website-development-background-5 {
-		background: url(../styles/images/describeItems/organic-food-website-development/image_FAQ.png) no-repeat center center;
-		height: 1045px;
-	}
-
-	&__organic-food-website-development-background-6 {
-		background: url(../styles/images/describeItems/organic-food-website-development/image_reviews.png) no-repeat center center;
-		height: 1003px;
-	}
-
-	&__organic-food-website-development-background-7 {
-		background: url(../styles/images/describeItems/organic-food-website-development/image_feedback_form.png) no-repeat center center;
-		height: 859px;
-	}
-
-	&__organic-food-website-development-background-8 {
-		background: url(../styles/images/describeItems/organic-food-website-development/image_basket1.png) no-repeat center center;
-		height: 800px;
-	}
-
-	&__organic-food-website-development-background-9 {
-		background: url(../styles/images/describeItems/organic-food-website-development/image_basket2.png) no-repeat center center;
-		height: 1150px;
-	}
-
-	&__organic-food-website-development-background-10 {
-		background: url(../styles/images/describeItems/organic-food-website-development/image_basket3.png) no-repeat center center;
-		height: 685px;
-	}
-
-	&__organic-food-website-development-background-11 {
-		background: url(../styles/images/describeItems/organic-food-website-development/image_pop_up.png) no-repeat center center;
-		height: 1268px;
-	}
-
-	&__organic-food-website-development-background-12 {
-		background: url(../styles/images/describeItems/organic-food-website-development/image_food_blog.png) no-repeat center center;
-		height: 950px;
-	}
-
-	&__organic-food-website-development-background-13 {
-		background: url(../styles/images/describeItems/organic-food-website-development/preview12.png) no-repeat center center;
-		height: 1000px;
+		background: url(../styles/images/describeItems/organic-food-website-development/desk_main_computer.png) no-repeat center center;
+		height: 3855px;
+		margin: 0 0 60px 0;
 	}
 }
 
